# Trend-Micro-AI-Hackathon-2025

./: .env.example  .gitignore  DEVELOPMENT.md  MCP_SETUP_GUIDE.md  QUICK_START_GUIDE.md  README.md  SETUP_INSTRUCTIONS.md  TEAM_TASKS.md  example_transcript.txt  pyproject.toml  requirements.txt  setup_credentials.py  test_mcp_integration.py  test_mcp_session_persistence.py  test_no_async_errors.py  test_setup.py
config/: agent_config.yaml
knowledge_base/: README.md
mcp_servers/: __init__.py  confluence_mcp.py  github_mcp.py  slack_mcp.py
src/: main.py  utils.py
src/agents/: __init__.py  workflow_agent.py
src/bots/: slack.py
src/integrations/: MCP_INTEGRATION.md  MCP_INTEGRATION_SUMMARY.md  __init__.py  confluence_integration.py  git_integration.py  mcp_unified.py  slack_integration.py
src/knowledge_base/: __init__.py  indexer.py  rag_system.py
src/utils/: ai_client.py
src/workflow/: __init__.py  orchestrator.py
templates/: confluence_page_template.md  design_spec_template.md  requirements_template.md
tests/: __init__.py
